# whereproc

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/whereproc/: __init__.py  cli.py
